--- a/content/首頁.html
+++ b/content/首頁.html
@@ -134,9 +134,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>首頁</h1>
-<p>2021/3/5 第二周 更新</p>
-<p>建立了倉儲，將舊有資料進行搬移。</p>
-<br /> <a href='倉庫.html'>Next</a> >> 倉庫</div>
+<p>2021/3/17 第四周 更新</p>
+<p>最近的更新都主要在小組倉儲。</p>
+<p>本學期應做事項:</p>
+<p>分組:</p>
+<p>W2-W4 (3 Weeks): 二人一組</p>
+<p>組別倉儲:https://40823233.github.io/stage1-bg27/content/index.html</p>
+<p>W5-W9 (5 Weeks): 四人一組</p>
+<p>W10-W18 (9 Weeks): 八人一組</p><br /> <a href='倉庫.html'>Next</a> >> 倉庫</div>
         
     <!-- footer -->
       <div class="container">
