第五周簡易作業

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,9 +4,126 @@
 <p>本學期應做事項:</p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組</p>
+<p>組別倉儲:https://40823233.github.io/stage1-bg27/content/index.html</p>
 <p>W5-W9 (5 Weeks): 四人一組</p>
 <p>W10-W18 (9 Weeks): 八人一組</p>
-<h1>倉庫</h1>
+<h1>第五周</h1>
+<table height="557" style="width: 174.628px;">
+<tbody>
+<tr style="height: 14px;">
+<td style="height: 14px; width: 66px;"><span>組別(乙班)</span></td>
+<td style="height: 14px; width: 93.6278px;"><span>時間</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">1</td>
+<td style="height: 13px; width: 93.6278px;">07:14</td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">2</td>
+<td style="height: 13px; width: 93.6278px;">01:55</td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">3</td>
+<td style="height: 13px; width: 93.6278px;">01:55</td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">4</td>
+<td style="height: 13px; width: 93.6278px;">02:51</td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">5</td>
+<td style="height: 13px; width: 93.6278px;"><span>03:00</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">6</td>
+<td style="height: 13px; width: 93.6278px;"><span>03:07</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">7</td>
+<td style="height: 13px; width: 93.6278px;"><span>02:47</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">8</td>
+<td style="height: 13px; width: 93.6278px;"><span>03:25</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">9</td>
+<td style="height: 13px; width: 93.6278px;"><span>02:43</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">10</td>
+<td style="height: 13px; width: 93.6278px;"><span>02:20</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">11</td>
+<td style="height: 13px; width: 93.6278px;"><span>01:38</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">12</td>
+<td style="height: 13px; width: 93.6278px;"><span>01:47</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">13</td>
+<td style="height: 13px; width: 93.6278px;"><span>02:09</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">14</td>
+<td style="height: 13px; width: 93.6278px;"><span>05:58</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">15</td>
+<td style="height: 13px; width: 93.6278px;"><span>03:24</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">16</td>
+<td style="height: 13px; width: 93.6278px;"><span>03:33</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">17</td>
+<td style="height: 13px; width: 93.6278px;"><span>04:33</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">18</td>
+<td style="height: 13px; width: 93.6278px;"><span>05:03</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">19</td>
+<td style="height: 13px; width: 93.6278px;"><span>03:11</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">20</td>
+<td style="height: 13px; width: 93.6278px;"><span>03:32</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">21</td>
+<td style="height: 13px; width: 93.6278px;"><span>05:02</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">22</td>
+<td style="height: 13px; width: 93.6278px;"><span>04:46</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">23</td>
+<td style="height: 13px; width: 93.6278px;"><span>02:55</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">24</td>
+<td style="height: 13px; width: 93.6278px;"><span>05:00</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">25</td>
+<td style="height: 13px; width: 93.6278px;"><span>04:53</span></td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">26</td>
+<td style="height: 13px; width: 93.6278px;">00:00</td>
+</tr>
+<tr style="height: 13px;">
+<td style="height: 13px; width: 66px;">27</td>
+<td style="height: 13px; width: 93.6278px;"><span>03:43</span></td>
+</tr>
+</tbody>
+</table><h1>倉庫</h1>
 <p>原始網站刪除的東西還有部分筆記在此</p>
 <p><span>備註:記得前往github自己的帳戶中 seeting/gitgub page裡面將 Branch修改為 master</span></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
