--- a/content/首頁.html
+++ b/content/首頁.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='第五周.html'>第五周</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>首頁</h1>
+    <div id="tipue_search_content"> <a href='第五周.html'>Next</a> >> 第五周<br /><h1>首頁</h1>
 <p>2021/3/17 第四周 更新</p>
 <p>最近的更新都主要在小組倉儲。</p>
 <p>本學期應做事項:</p>
@@ -141,7 +141,8 @@ img.add_border {
 <p>W2-W4 (3 Weeks): 二人一組</p>
 <p>組別倉儲:https://40823233.github.io/stage1-bg27/content/index.html</p>
 <p>W5-W9 (5 Weeks): 四人一組</p>
-<p>W10-W18 (9 Weeks): 八人一組</p><br /> <a href='倉庫.html'>Next</a> >> 倉庫</div>
+<p>W10-W18 (9 Weeks): 八人一組</p>
+<br /> <a href='第五周.html'>Next</a> >> 第五周</div>
         
     <!-- footer -->
       <div class="container">
