W5簡易作業更新

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,13 +1,12 @@
 <h1>首頁</h1>
-<p>2021/3/17 第四周 更新</p>
-<p>最近的更新都主要在小組倉儲。</p>
+<p>2021/3/26 第五周 更新</p>
 <p>本學期應做事項:</p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組</p>
 <p>組別倉儲:https://40823233.github.io/stage1-bg27/content/index.html</p>
 <p>W5-W9 (5 Weeks): 四人一組</p>
 <p>W10-W18 (9 Weeks): 八人一組</p>
-<h1>第五周</h1>
+<h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
@@ -123,7 +122,8 @@
 <td style="height: 13px; width: 117.841px;"><span>03:43</span></td>
 </tr>
 </tbody>
-</table><h1>倉庫</h1>
+</table>
+<h1>倉庫</h1>
 <p>原始網站刪除的東西還有部分筆記在此</p>
 <p><span>備註:記得前往github自己的帳戶中 seeting/gitgub page裡面將 Branch修改為 master</span></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
