--- a/content/W5.html
+++ b/content/W5.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='第五周.html'>第五周</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">首頁 << <a href='首頁.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>第五周</h1>
+    <div id="tipue_search_content">首頁 << <a href='首頁.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
@@ -249,7 +249,8 @@ img.add_border {
 <td style="height: 13px; width: 117.841px;"><span>03:43</span></td>
 </tr>
 </tbody>
-</table><br />首頁 << <a href='首頁.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
+</table>
+<br />首頁 << <a href='首頁.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
         
     <!-- footer -->
       <div class="container">
