--- a/content/index.html
+++ b/content/index.html
@@ -134,14 +134,15 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='W5.html'>Next</a> >> W5<br /><h1>首頁</h1>
-<p>2021/3/26 第五周 更新</p>
+<p>2021/4/9 第七周 更新</p>
+<p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>本學期應做事項:</p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組</p>
-<p>組別倉儲:https://40823233.github.io/stage1-bg27/content/index.html</p>
+<p><a href="https://40823233.github.io/stage1-bg27/content/index.html">組別網頁</a></p>
 <p>W5-W9 (5 Weeks): 四人一組</p>
-<p>W10-W18 (9 Weeks): 八人一組</p>
-<br /> <a href='W5.html'>Next</a> >> W5</div>
+<p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
+<p>W10-W18 (9 Weeks): 八人一組</p><br /> <a href='W5.html'>Next</a> >> W5</div>
         
     <!-- footer -->
       <div class="container">
