--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,5 @@
 <h1>首頁</h1>
-<p>2021/4/9 第七周 更新</p>
+<p>2021/4/16 第八周 更新</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>本學期應做事項:</p>
 <p>分組:</p>
@@ -7,7 +7,8 @@
 <p><a href="https://40823233.github.io/stage1-bg27/content/index.html">組別網頁</a></p>
 <p>W5-W9 (5 Weeks): 四人一組</p>
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
-<p>W10-W18 (9 Weeks): 八人一組</p><h1>W5</h1>
+<p>W10-W18 (9 Weeks): 八人一組</p>
+<h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
