--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,14 +1,13 @@
 <h1>首頁</h1>
 <p>2021/4/9 第七周 更新</p>
-<p>我的倉儲:https://github.com/40823233/cd2021</p>
+<p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>本學期應做事項:</p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組</p>
-<p>組別網頁:https://40823233.github.io/stage1-bg27/content/index.html</p>
+<p><a href="https://40823233.github.io/stage1-bg27/content/index.html">組別網頁</a></p>
 <p>W5-W9 (5 Weeks): 四人一組</p>
-<p>組別網頁:https://40623144.github.io/stage2-bg8/content/index.html</p>
-<p>W10-W18 (9 Weeks): 八人一組</p>
-<h1>W5</h1>
+<p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
+<p>W10-W18 (9 Weeks): 八人一組</p><h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
