--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,6 @@
 <h1>首頁</h1>
 <p>2021/4/16 第八周 更新</p>
+<p>倉儲近期沒有什麼變動，主要以分組倉儲為主。</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>本學期應做事項:</p>
 <p>分組:</p>
