--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,5 @@
 <h1>首頁</h1>
-<p>2021/5/7 第十一周 更新</p>
+<p>2021/5/14 第十二周 更新</p>
 <p>倉儲需要新增第一次與第二次分組的東西，開始進行整理。</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>本學期應做事項:</p>
