--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,6 @@
 <h1>首頁</h1>
-<p>2021/4/16 第八周 更新</p>
-<p>倉儲近期沒有什麼變動，主要以分組倉儲為主。</p>
+<p>2021/5/7 第十一周 更新</p>
+<p>倉儲需要新增第一次與第二次分組的東西，開始進行整理。</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>本學期應做事項:</p>
 <p>分組:</p>
@@ -9,6 +9,8 @@
 <p>W5-W9 (5 Weeks): 四人一組</p>
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
 <p>W10-W18 (9 Weeks): 八人一組</p>
+<p><a href="https://40623144.github.io/stage3-bg7/content/index.html">組別網頁</a></p>
+<p></p>
 <h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
