新增以前分組的內容

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,17 +1,15 @@
 <h1>首頁</h1>
-<p>2021/5/14 第十二周 更新</p>
-<p>倉儲需要新增第一次與第二次分組的東西，開始進行整理。</p>
+<p>2021/5/28 第十四周 更新</p>
+<p>前幾組做的東西將分別放入新增的頁面(bg1,bg2)中</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
-<p>本學期應做事項:</p>
 <p>分組:</p>
-<p>W2-W4 (3 Weeks): 二人一組</p>
+<p>W2-W4 (3 Weeks): 二人一組，組長是我</p>
 <p><a href="https://40823233.github.io/stage1-bg27/content/index.html">組別網頁</a></p>
-<p>W5-W9 (5 Weeks): 四人一組</p>
+<p>W5-W9 (5 Weeks): 四人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage2-bg8" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
-<p>W10-W18 (9 Weeks): 八人一組</p>
+<p>W10-W18 (9 Weeks): 八人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage3-bg7" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage3-bg7/content/index.html">組別網頁</a></p>
-<p></p>
-<h1>W5</h1>
+<p></p><h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
@@ -128,7 +126,16 @@
 </tr>
 </tbody>
 </table>
-<h1>倉庫</h1>
+<h1>bg1</h1>
+<p>此次分組中我是組長，由另一個人進行繪圖模擬，我於其繪圖中進行討論哪裡需要修改，而我則負責處理網頁，做報告，報告等。因此圖及模擬除了在分組網頁中，應該要由另一人放入自己網頁中。</p>
+<p>因認知錯誤，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
+<p><a href="https://github.com/40823233/stage1-bg27/blob/main/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage1-bg27.pdf">PDF</a></p>
+<p>其餘內容於報告中口頭描述。</p><h1>bg2</h1>
+<p>第二次分組組長為40623144</p>
+<p>我負責做<a href="https://40623144.github.io/stage2-bg8/reveal/index.html#/">reveal</a>及分組部分頁面的調整。</p>
+<p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a>及<a href="https://www.youtube.com/watch?v=FecxkBLTXnc">模擬影片</a>上傳<img alt="" height="87" src="/images/40823233.png" width="300"/></p>
+<p><a class="pl-3 pr-3 py-3 p-md-0 mt-n3 mb-n3 mr-n3 m-md-0 Link--primary no-underline no-wrap" data-pjax="" href="https://github.com/40623144/stage2-bg8/commits/main"><span class="d-none d-sm-inline"><span aria-label="Commits on main" class="color-text-secondary d-none d-lg-inline">commits</span></span></a>可以證明我所做的事情。</p>
+<p>較為可惜的是報告當時繪圖的人不在，緊急之下跳過許多關於繪圖的部分，導致報告的很爛。</p><h1>倉庫</h1>
 <p>原始網站刪除的東西還有部分筆記在此</p>
 <p><span>備註:記得前往github自己的帳戶中 seeting/gitgub page裡面將 Branch修改為 master</span></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
