--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='bg1.html'>bg1</a><li><a href='bg2.html'>bg2</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,19 +134,17 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='W5.html'>Next</a> >> W5<br /><h1>首頁</h1>
-<p>2021/5/14 第十二周 更新</p>
-<p>倉儲需要新增第一次與第二次分組的東西，開始進行整理。</p>
+<p>2021/5/28 第十四周 更新</p>
+<p>前幾組做的東西將分別放入新增的頁面(bg1,bg2)中</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
-<p>本學期應做事項:</p>
 <p>分組:</p>
-<p>W2-W4 (3 Weeks): 二人一組</p>
+<p>W2-W4 (3 Weeks): 二人一組，組長是我</p>
 <p><a href="https://40823233.github.io/stage1-bg27/content/index.html">組別網頁</a></p>
-<p>W5-W9 (5 Weeks): 四人一組</p>
+<p>W5-W9 (5 Weeks): 四人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage2-bg8" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
-<p>W10-W18 (9 Weeks): 八人一組</p>
+<p>W10-W18 (9 Weeks): 八人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage3-bg7" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage3-bg7/content/index.html">組別網頁</a></p>
-<p></p>
-<br /> <a href='W5.html'>Next</a> >> W5</div>
+<p></p><br /> <a href='W5.html'>Next</a> >> W5</div>
         
     <!-- footer -->
       <div class="container">
