--- a/content/W5.html
+++ b/content/W5.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='bg1.html'>bg1</a><li><a href='bg2.html'>bg2</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">首頁 << <a href='首頁.html'>Previous</a> <a href='bg1.html'>Next</a> >> bg1<br /><h1>W5</h1>
+    <div id="tipue_search_content">首頁 << <a href='首頁.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27<br /><h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
@@ -250,7 +250,7 @@ img.add_border {
 </tr>
 </tbody>
 </table>
-<br />首頁 << <a href='首頁.html'>Previous</a> <a href='bg1.html'>Next</a> >> bg1</div>
+<br />首頁 << <a href='首頁.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27</div>
         
     <!-- footer -->
       <div class="container">
