--- a/content/stage3-bg7.html
+++ b/content/stage3-bg7.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='bg1.html'>bg1</a><li><a href='bg2.html'>bg2</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,12 +133,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">bg1 << <a href='bg1.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>bg2</h1>
-<p>第二次分組組長為40623144</p>
-<p>我負責做<a href="https://40623144.github.io/stage2-bg8/reveal/index.html#/">reveal</a>及分組部分頁面的調整。</p>
-<p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a>及<a href="https://www.youtube.com/watch?v=FecxkBLTXnc">模擬影片</a>上傳<img alt="" height="87" src="./../images/40823233.png" width="300"/></p>
-<p><a class="pl-3 pr-3 py-3 p-md-0 mt-n3 mb-n3 mr-n3 m-md-0 Link--primary no-underline no-wrap" data-pjax="" href="https://github.com/40623144/stage2-bg8/commits/main"><span class="d-none d-sm-inline"><span aria-label="Commits on main" class="color-text-secondary d-none d-lg-inline">commits</span></span></a>可以證明我所做的事情。</p>
-<p>較為可惜的是報告當時繪圖的人不在，緊急之下跳過許多關於繪圖的部分，導致報告的很爛。</p><br />bg1 << <a href='bg1.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
+    <div id="tipue_search_content">stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>stage3-bg7</h1>
+<p>本次分組組員</p>
+<p><a href="https://40623144.github.io/cd2021">40623144</a></p>
+<p><a href="https://40823233.github.io/cd2021">40823233</a></p>
+<p><a href="https://s40723224.github.io/cd2021">40723224</a></p>
+<p><a href="https://40823241.github.io/cd2021">40823241</a></p>
+<p><a href="https://40423155.github.io/cd2021">40423155</a></p>
+<p><a href="https://40823227.github.io/cd2021">40823227</a></p>
+<p><a href="https://s40723233.github.io/cd2021">40723233</a></p>
+<br />stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
         
     <!-- footer -->
       <div class="container">
