新增W15字幕整理

--- a/content/倉庫.html
+++ b/content/倉庫.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='W15.html'>W15</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage3-bg7 << <a href='stage3-bg7.html'>Previous</a> <br /><h1>倉庫</h1>
+    <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <br /><h1>倉庫</h1>
 <p>原始網站刪除的東西還有部分筆記在此</p>
 <p><span>備註:記得前往github自己的帳戶中 seeting/gitgub page裡面將 Branch修改為 master</span></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
@@ -210,7 +210,7 @@ make.start()</code></pre>
 <p>使用 csave 按鈕存檔無法刪除頁面資料.</p>
 <p>使用 Edit All 模式, 無法使用 csave 按鈕（尚未測試).</p>
 <p></p>
-<p></p><br />stage3-bg7 << <a href='stage3-bg7.html'>Previous</a> </div>
+<p></p><br />W15 << <a href='W15.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
