--- a/config/content.htm
+++ b/config/content.htm
@@ -147,7 +147,8 @@
 <p><a href="https://40423155.github.io/cd2021">40423155</a></p>
 <p><a href="https://40823227.github.io/cd2021">40823227</a></p>
 <p><a href="https://s40723233.github.io/cd2021">40723233</a></p>
-<h1>W15</h1>
+<h2>W15</h2>
+<p>W15取分項目1由我負責，證據於<a href="https://youtu.be/WbbXqoTKe8I">6/4號小組討論</a>中的meet文字討論欄中</p>
 <p>影片1</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
 <p>影片字幕中文(google翻譯):</p>
