--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -147,7 +147,7 @@
 <p><a href="https://40423155.github.io/cd2021">40423155</a></p>
 <p><a href="https://40823227.github.io/cd2021">40823227</a></p>
 <p><a href="https://s40723233.github.io/cd2021">40723233</a></p>
-<h1>W15</h1>
+<h2>W15</h2>
 <p>影片1</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
 <p>影片字幕中文(google翻譯):</p>
@@ -233,7 +233,43 @@
 <p>而且，這里是總結形式的解決方案<br/>對於我們的雙連桿的逆運動學</p>
 <p>當機器人處於這種特定配置時，<br/>其中 Q2 為負。</p>
 <p>讓我們比較兩種解決方案，案例<br/>其中 Q2 為正，Q2 為正的情況</p>
-<p>是否定的。</p><h1>倉庫</h1>
+<p>是否定的。</p>
+<p>影片2</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
+<p>影片字幕中文(google翻譯):</p>
+<p>這里我們有與我們相同的兩個鏈接機器人<br/>只是看著，但這次我們要</p>
+<p>使用分析方法解決它，即<br/>我們是否會更多地依賴代數，</p>
+<p>特定的線性代數而不是幾何。<br/>我們有一個表達式 E，它是齊次的</p>
+<p>表示姿勢的變換<br/>機器人終結者，我們看了這個</p>
+<p>在上一課中，我們可以編寫 endefector<br/>構成一個基本齊次序列</p>
+<p>轉換。 Q1 的旋轉，平移<br/>沿 X 方向 A1，旋轉</p>
+<p>Q2 然後在 X 方向上平移<br/>通過 A2。如果我展開這個，乘以所有</p>
+<p>一起轉換，我得到了表達<br/>顯示在這里；三乘三同構變換</p>
+<p>表示機器人姿態的矩陣<br/>終結者。</p>
+<p>現在對於這個特殊的兩連桿機器人，我們<br/>只對它的位置感興趣</p>
+<p>endefector，它是 X 和 Y 坐標，它們<br/>這兩個元素是同質的嗎</p>
+<p>變換矩陣，所以我要覆制<br/>那些出來。所以這里又是我們的表達</p>
+<p>對於 X 和 Y 我們要做的是<br/>一個相當常見的技巧，我們要平方</p>
+<p>並添加這兩個方程，我得到了一個關系<br/>看起來像這樣。現在我可以解決</p>
+<p>根據 endefector 的關節角度 Q2<br/>姿勢 X 和 Y 以及機器人的常數 A1 和 A2。</p>
+<p>現在我要做的是應用總和<br/>的角度身份。我要擴展這些</p>
+<p>項，Q1 的正弦加 Q2 或 Q1 的余弦加<br/>Q2 為了讓生活更輕松一點，我</p>
+<p>打算建造一些變電站，所以無論在哪里<br/>我有 cos Q2，我要寫 C2 以及在哪里</p>
+<p>曾經我有正弦 Q2，我要寫 S2。<br/>這是一個相當常見的速記，當人們</p>
+<p>正在研究機器人運動學方程。<br/>這是制作後的方程式</p>
+<p>替代品。看這兩個方程，<br/>我可以看到他們掉進了一個很好的井里</p>
+<p>已知形式，對於該形式有一個非常<br/>眾所周知的解決方案。所以我要考慮</p>
+<p>只是其中一個方程，方程為<br/>Y 並使用我們眾所周知的身份</p>
+<p>解決方案，我可以確定<br/>變量小a、小b和小c</p>
+<p>一旦我確定了這些，我就可以<br/>只需寫下 Q1 的解決方案，即</p>
+<p>在這個特定的情況下相當於 theta<br/>案件。</p>
+<p>這里再次是我們對 Q1 的表達式，覆制<br/>從上一張幻燈片結束，我們可能還記得</p>
+<p>從我們早期的工作中我們確定<br/>這種特殊的關系； X平方加</p>
+<p>Y 平方等於這個特定的覆數<br/>表達。所以我可以用和代替它</p>
+<p>做一些簡化，我最終得到這個<br/>Q1 的表達式稍微簡單一些。和</p>
+<p>這是我得到的相同表達<br/>上一節中的幾何方法。</p>
+<h1>倉庫</h1>
 <p>原始網站刪除的東西還有部分筆記在此</p>
 <p><span>備註:記得前往github自己的帳戶中 seeting/gitgub page裡面將 Branch修改為 master</span></p>
 <p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
