--- a/content/W15.html
+++ b/content/W15.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='W15.html'>W15</a><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li class='has-children'><a href='stage3-bg7.html'>stage3-bg7</a><ul class='dropdown'><li><a href='W15.html'>W15</a></li></ul><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,6 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">stage3-bg7 << <a href='stage3-bg7.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>W15</h1>
+<p>W15取分項目1由我負責，證據於<a href="https://youtu.be/WbbXqoTKe8I">6/4號小組討論</a>中的meet文字討論欄中</p>
 <p>影片1</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
 <p>影片字幕中文(google翻譯):</p>
