--- a/content/stage3-bg7.html
+++ b/content/stage3-bg7.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li class='has-children'><a href='stage3-bg7.html'>stage3-bg7</a><ul class='dropdown'><li><a href='W15.html'>W15</a></li></ul><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li class='has-children'><a href='stage3-bg7.html'>stage3-bg7</a><ul class='dropdown'><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='W15.html'>Next</a> >> W15<br /><h1>stage3-bg7</h1>
+    <div id="tipue_search_content">stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>stage3-bg7</h1>
 <p>本次分組組員</p>
 <p><a href="https://40623144.github.io/cd2021">40623144</a></p>
 <p><a href="https://40823233.github.io/cd2021">40823233</a></p>
@@ -142,7 +142,7 @@ img.add_border {
 <p><a href="https://40423155.github.io/cd2021">40423155</a></p>
 <p><a href="https://40823227.github.io/cd2021">40823227</a></p>
 <p><a href="https://s40723233.github.io/cd2021">40723233</a></p>
-<br />stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='W15.html'>Next</a> >> W15</div>
+<br />stage2-bg8 << <a href='stage2-bg8.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
         
     <!-- footer -->
       <div class="container">
