--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,6 @@
 <h1>首頁</h1>
-<p>2021/6/4 第十五周 更新</p>
-<p>前幾組做的東西將分別放入新增的頁面(bg1,bg2)中</p>
+<p>2021/6/11 第十六周 更新</p>
+<p>補W13，W14取分項目</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組，組長是我</p>
@@ -9,8 +9,7 @@
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
 <p>W10-W18 (9 Weeks): 八人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage3-bg7" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage3-bg7/content/index.html">組別網頁</a></p>
-<p></p>
-<h1>W5</h1>
+<p></p><h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
