--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,6 +1,6 @@
 <h1>首頁</h1>
-<p>2021/6/4 第十五周 更新</p>
-<p>前幾組做的東西將分別放入新增的頁面(bg1,bg2)中</p>
+<p>2021/6/11 第十六周 更新</p>
+<p>補W13，W14取分項目</p>
 <p><a href="https://github.com/40823233/cd2021">我的倉儲</a></p>
 <p>分組:</p>
 <p>W2-W4 (3 Weeks): 二人一組，組長是我</p>
@@ -9,8 +9,7 @@
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
 <p>W10-W18 (9 Weeks): 八人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage3-bg7" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage3-bg7/content/index.html">組別網頁</a></p>
-<p></p>
-<h1>W5</h1>
+<p></p><h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
@@ -365,7 +364,8 @@
 <div class="line number213 index212 alt2"> </div>
 <div class="line number214 index213 alt1"><code class="py comments"># Move home when the robot finishes</code></div>
 <div class="line number215 index214 alt2"><code class="py plain">robot.MoveJ([</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">10</code><code class="py plain">,</code><code class="py keyword">-</code><code class="py value">200</code><code class="py plain">])</code></div>
-<br/><br/><br/>W14<br/>W14
+<p></p>
+<h2>W14</h2>
 <p>取分項目1，參考</p>
 <p><a href="https://40623144.github.io/cd2021/content/week14.html">Week14</a></p>
 <p>def stu2b(account):<br/> return account<br/>teamb = []<br/>   <br/>with open("stage3_2b.txt") as fh:     #讀取stage3_2b的檔案<br/>    data = fh.readlines()<br/>    data = [a.replace('40823231','40823231-2') for a in data]      #將40823231換成40823231-2<br/>    data = [a.replace('407','s407') for a in data]     #將有407的學號換成s407<br/>  <br/>for i in range(len(data)):     #數據中會有\n跟\t，將\n跟\t去除<br/>    group = data[i].rstrip("\n").split("\t")<br/>    teamb.append(group)<br/>       <br/>output = ""    <br/>seperator = "-"*10 + "&lt;/br&gt;"     #分隔號製作<br/>   <br/>for i in teamb[0:]:    #小組 組長 其他六個組員<br/>    team = i[0]<br/>    leader = stu2b(i[1])<br/>    m1 = stu2b(i[3])<br/>    m2 = stu2b(i[5])<br/>    m3 = stu2b(i[7])<br/>    m4 = stu2b(i[9])<br/>    m5 = stu2b(i[11])<br/>    m6 = stu2b(i[13])<br/>  <br/>           <br/>    leaderrepo = "&lt;a href='http://github.com/" + leader + "/cd2021'&gt;" + leader + " repo&lt;/a&gt;"    #組長以及組員的倉儲和網站<br/>    leadersite = "&lt;a href='http://" + leader + ".github.io/cd2021'&gt;" + leader +  " site&lt;/a&gt;"<br/>    m1repo = "&lt;a href='http://github.com/" + m1 + "/cd2021'&gt;" + m1 + " repo&lt;/a&gt;"<br/>    m1site = "&lt;a href='http://" + m1 + ".github.io/cd2021'&gt;" + m1 +  " site&lt;/a&gt;"<br/>    m2repo = "&lt;a href='http://github.com/" + m2 + "/cd2021'&gt;" + m2 + " repo&lt;/a&gt;"<br/>    m2site = "&lt;a href='http://" + m2 + ".github.io/cd2021'&gt;" + m2 +  " site&lt;/a&gt;"<br/>    m3repo = "&lt;a href='http://github.com/" + m3 + "/cd2021'&gt;" + m3 + " repo&lt;/a&gt;"<br/>    m3site = "&lt;a href='http://" + m3 + ".github.io/cd2021'&gt;" + m3 +  " site&lt;/a&gt;"<br/>    m4repo = "&lt;a href='http://github.com/" + m4 + "/cd2021'&gt;" + m4 + " repo&lt;/a&gt;"<br/>    m4site = "&lt;a href='http://" + m4 + ".github.io/cd2021'&gt;" + m4 +  " site&lt;/a&gt;"<br/>    m5repo = "&lt;a href='http://github.com/" + m5 + "/cd2021'&gt;" + m5 + " repo&lt;/a&gt;"<br/>    m5site = "&lt;a href='http://" + m5 + ".github.io/cd2021'&gt;" + m5 +  " site&lt;/a&gt;"<br/>    m6repo = "&lt;a href='http://github.com/" + m6 + "/cd2021'&gt;" + m6 + " repo&lt;/a&gt;"<br/>    m6site = "&lt;a href='http://" + m6 + ".github.io/cd2021'&gt;" + m6 +  " site&lt;/a&gt;"<br/>    <br/>   <br/>    teamrepo = "&lt;a href='http://github.com/" + leader + "/" + team + "'&gt;" + team + " repo&lt;/a&gt;"     #小組的倉儲含網站<br/>    teamsite =  "&lt;a href='http://" + m1 + ".github.io/" + team + "'&gt;" + team +  " site&lt;/a&gt;"<br/>   <br/>    output += teamrepo + " | " + teamsite + " | " +leaderrepo + " | " + leadersite + " | " +m1repo + " | " + m1site + " | " +m2repo + " | " + m2site + " | " +m3repo + " | " + m3site + " | " +m4repo + " | " + m4site + " | " +m5repo + " | " + m5site + " | " +m6repo + " | " + m6site <br/>       <br/>            <br/>    try:<br/>        m7 = stu2b(i[15])     #第七個組員<br/>    except:<br/>        m7 = ""<br/>    try:<br/>        m8 = stu2b(i[17])     #第八個組員<br/>    except:<br/>        m8 = ""<br/>          <br/>    if m7 != "":<br/>       m7repo = "&lt;a href='http://github.com/" + m7 + "/cd2021'&gt;" + m7 + " repo&lt;/a&gt;"     #如果有第七個組員會再加倉儲和網站沒有的話就空白<br/>       m7site = "&lt;a href='http://" + m7 + ".github.io/cd2021'&gt;" + m7 +  " site&lt;/a&gt;" <br/>       output += " |  " + m7repo + "| " + m7site<br/>    else:<br/>        output += "" <br/>       <br/>    if m8 != "":<br/>       m8repo = "&lt;a href='http://github.com/" + m8 + "/cd2021'&gt;" + m8 + " repo&lt;/a&gt;"     #如果有第八個組員會再加倉儲和網站最後再加分隔線<br/>       m8site = "&lt;a href='http://" + m8 + ".github.io/cd2021'&gt;" + m8 +  " site&lt;/a&gt;" <br/>       output += " |  " + m8repo + "| " + m8site + "&lt;br /&gt;" + seperator<br/>    else:<br/>        output += "&lt;br /&gt;" + seperator<br/>   <br/>   <br/>print(output)     #輸出</p>
