--- a/config/content.htm
+++ b/config/content.htm
@@ -9,7 +9,8 @@
 <p><a href="https://40623144.github.io/stage2-bg8/content/index.html">組別網頁</a></p>
 <p>W10-W18 (9 Weeks): 八人一組，組長:<a class="commit-author user-mention" href="https://github.com/40623144/stage3-bg7" title="View all commits by 40623144">40623144</a></p>
 <p><a href="https://40623144.github.io/stage3-bg7/content/index.html">組別網頁</a></p>
-<p></p><h1>W5</h1>
+<p></p>
+<h1>W5</h1>
 <table height="557" style="width: 216px;">
 <tbody>
 <tr style="height: 14px;">
@@ -126,27 +127,7 @@
 </tr>
 </tbody>
 </table>
-<h1>stage1-bg27</h1>
-<p>此次分組中我是組長，由另一個人進行繪圖模擬，我於其繪圖中進行討論哪裡需要修改，而我則負責處理網頁，做報告，報告等。因此圖及模擬除了在分組網頁中，應該要由另一人放入自己網頁中。</p>
-<p>因認知錯誤，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
-<p><a href="https://github.com/40823233/stage1-bg27/blob/main/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage1-bg27.pdf">PDF</a></p>
-<p>其餘內容於報告中口頭描述。</p>
-<h1>stage2-bg8</h1>
-<p>第二次分組組長為40623144</p>
-<p>我負責做<a href="https://40623144.github.io/stage2-bg8/reveal/index.html#/">reveal</a>及分組部分頁面的調整。</p>
-<p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a>及<a href="https://www.youtube.com/watch?v=FecxkBLTXnc">模擬影片</a>上傳<img alt="" height="87" src="/images/40823233.png" width="300"/></p>
-<p><a class="pl-3 pr-3 py-3 p-md-0 mt-n3 mb-n3 mr-n3 m-md-0 Link--primary no-underline no-wrap" data-pjax="" href="https://github.com/40623144/stage2-bg8/commits/main"><span class="d-none d-sm-inline"><span aria-label="Commits on main" class="color-text-secondary d-none d-lg-inline">commits</span></span></a>可以證明我所做的事情。</p>
-<p>較為可惜的是報告當時繪圖的人不在，緊急之下跳過許多關於繪圖的部分，導致報告的很爛。</p>
-<h1>stage3-bg7</h1>
-<p>本次分組組員</p>
-<p><a href="https://40623144.github.io/cd2021">40623144</a></p>
-<p><a href="https://40823233.github.io/cd2021">40823233</a></p>
-<p><a href="https://s40723224.github.io/cd2021">40723224</a></p>
-<p><a href="https://40823241.github.io/cd2021">40823241</a></p>
-<p><a href="https://40423155.github.io/cd2021">40423155</a></p>
-<p><a href="https://40823227.github.io/cd2021">40823227</a></p>
-<p><a href="https://s40723233.github.io/cd2021">40723233</a></p>
-<h2>W13</h2>
+<h1>W13</h1>
 <p>機械手臂程式</p>
 <p>參考組長影片:<a href="https://40623144.github.io/cd2021/content/%E7%AC%AC%E5%8D%81%E4%B8%89%E9%80%B1.html">模擬影片</a></p>
 <div class="line number1 index0 alt2"><code class="py keyword">from</code> <code class="py plain">robolink </code><code class="py keyword">import</code> <code class="py keyword">*</code></div>
@@ -365,14 +346,14 @@
 <div class="line number214 index213 alt1"><code class="py comments"># Move home when the robot finishes</code></div>
 <div class="line number215 index214 alt2"><code class="py plain">robot.MoveJ([</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">10</code><code class="py plain">,</code><code class="py keyword">-</code><code class="py value">200</code><code class="py plain">])</code></div>
 <p></p>
-<h2>W14</h2>
-<p>取分項目1，參考</p>
+<h1>W14</h1>
+<p><span style="font-size: 11px;">取分項目1，參考</span></p>
 <p><a href="https://40623144.github.io/cd2021/content/week14.html">Week14</a></p>
 <p>def stu2b(account):<br/> return account<br/>teamb = []<br/>   <br/>with open("stage3_2b.txt") as fh:     #讀取stage3_2b的檔案<br/>    data = fh.readlines()<br/>    data = [a.replace('40823231','40823231-2') for a in data]      #將40823231換成40823231-2<br/>    data = [a.replace('407','s407') for a in data]     #將有407的學號換成s407<br/>  <br/>for i in range(len(data)):     #數據中會有\n跟\t，將\n跟\t去除<br/>    group = data[i].rstrip("\n").split("\t")<br/>    teamb.append(group)<br/>       <br/>output = ""    <br/>seperator = "-"*10 + "&lt;/br&gt;"     #分隔號製作<br/>   <br/>for i in teamb[0:]:    #小組 組長 其他六個組員<br/>    team = i[0]<br/>    leader = stu2b(i[1])<br/>    m1 = stu2b(i[3])<br/>    m2 = stu2b(i[5])<br/>    m3 = stu2b(i[7])<br/>    m4 = stu2b(i[9])<br/>    m5 = stu2b(i[11])<br/>    m6 = stu2b(i[13])<br/>  <br/>           <br/>    leaderrepo = "&lt;a href='http://github.com/" + leader + "/cd2021'&gt;" + leader + " repo&lt;/a&gt;"    #組長以及組員的倉儲和網站<br/>    leadersite = "&lt;a href='http://" + leader + ".github.io/cd2021'&gt;" + leader +  " site&lt;/a&gt;"<br/>    m1repo = "&lt;a href='http://github.com/" + m1 + "/cd2021'&gt;" + m1 + " repo&lt;/a&gt;"<br/>    m1site = "&lt;a href='http://" + m1 + ".github.io/cd2021'&gt;" + m1 +  " site&lt;/a&gt;"<br/>    m2repo = "&lt;a href='http://github.com/" + m2 + "/cd2021'&gt;" + m2 + " repo&lt;/a&gt;"<br/>    m2site = "&lt;a href='http://" + m2 + ".github.io/cd2021'&gt;" + m2 +  " site&lt;/a&gt;"<br/>    m3repo = "&lt;a href='http://github.com/" + m3 + "/cd2021'&gt;" + m3 + " repo&lt;/a&gt;"<br/>    m3site = "&lt;a href='http://" + m3 + ".github.io/cd2021'&gt;" + m3 +  " site&lt;/a&gt;"<br/>    m4repo = "&lt;a href='http://github.com/" + m4 + "/cd2021'&gt;" + m4 + " repo&lt;/a&gt;"<br/>    m4site = "&lt;a href='http://" + m4 + ".github.io/cd2021'&gt;" + m4 +  " site&lt;/a&gt;"<br/>    m5repo = "&lt;a href='http://github.com/" + m5 + "/cd2021'&gt;" + m5 + " repo&lt;/a&gt;"<br/>    m5site = "&lt;a href='http://" + m5 + ".github.io/cd2021'&gt;" + m5 +  " site&lt;/a&gt;"<br/>    m6repo = "&lt;a href='http://github.com/" + m6 + "/cd2021'&gt;" + m6 + " repo&lt;/a&gt;"<br/>    m6site = "&lt;a href='http://" + m6 + ".github.io/cd2021'&gt;" + m6 +  " site&lt;/a&gt;"<br/>    <br/>   <br/>    teamrepo = "&lt;a href='http://github.com/" + leader + "/" + team + "'&gt;" + team + " repo&lt;/a&gt;"     #小組的倉儲含網站<br/>    teamsite =  "&lt;a href='http://" + m1 + ".github.io/" + team + "'&gt;" + team +  " site&lt;/a&gt;"<br/>   <br/>    output += teamrepo + " | " + teamsite + " | " +leaderrepo + " | " + leadersite + " | " +m1repo + " | " + m1site + " | " +m2repo + " | " + m2site + " | " +m3repo + " | " + m3site + " | " +m4repo + " | " + m4site + " | " +m5repo + " | " + m5site + " | " +m6repo + " | " + m6site <br/>       <br/>            <br/>    try:<br/>        m7 = stu2b(i[15])     #第七個組員<br/>    except:<br/>        m7 = ""<br/>    try:<br/>        m8 = stu2b(i[17])     #第八個組員<br/>    except:<br/>        m8 = ""<br/>          <br/>    if m7 != "":<br/>       m7repo = "&lt;a href='http://github.com/" + m7 + "/cd2021'&gt;" + m7 + " repo&lt;/a&gt;"     #如果有第七個組員會再加倉儲和網站沒有的話就空白<br/>       m7site = "&lt;a href='http://" + m7 + ".github.io/cd2021'&gt;" + m7 +  " site&lt;/a&gt;" <br/>       output += " |  " + m7repo + "| " + m7site<br/>    else:<br/>        output += "" <br/>       <br/>    if m8 != "":<br/>       m8repo = "&lt;a href='http://github.com/" + m8 + "/cd2021'&gt;" + m8 + " repo&lt;/a&gt;"     #如果有第八個組員會再加倉儲和網站最後再加分隔線<br/>       m8site = "&lt;a href='http://" + m8 + ".github.io/cd2021'&gt;" + m8 +  " site&lt;/a&gt;" <br/>       output += " |  " + m8repo + "| " + m8site + "&lt;br /&gt;" + seperator<br/>    else:<br/>        output += "&lt;br /&gt;" + seperator<br/>   <br/>   <br/>print(output)     #輸出</p>
-<h2>W15</h2>
+<h1>W15</h1>
 <p>W15取分項目1由我負責，證據於<a href="https://youtu.be/WbbXqoTKe8I">6/4號小組討論</a>中的meet文字討論欄中</p>
 <p>影片1</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
 <p>影片字幕中文(google翻譯):</p>
 <p>我們在前面看到了這個簡單的雙連桿機器人<br/>關於正向運動學的講座。</p>
 <p>描述了該機器人的工具提示位姿<br/>簡單地由兩個數字，坐標 x 和</p>
@@ -459,7 +440,7 @@
 <p>是否定的。</p>
 <p>影片2</p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
 <p>影片字幕中文(google翻譯):</p>
 <p>這里我們有與我們相同的兩個鏈接機器人<br/>只是看著，但這次我們要</p>
 <p>使用分析方法解決它，即<br/>我們是否會更多地依賴代數，</p>
@@ -492,6 +473,26 @@
 <p>Y 平方等於這個特定的覆數<br/>表達。所以我可以用和代替它</p>
 <p>做一些簡化，我最終得到這個<br/>Q1 的表達式稍微簡單一些。和</p>
 <p>這是我得到的相同表達<br/>上一節中的幾何方法。</p>
+<h1>stage1-bg27</h1>
+<p>此次分組中我是組長，由另一個人進行繪圖模擬，我於其繪圖中進行討論哪裡需要修改，而我則負責處理網頁，做報告，報告等。因此圖及模擬除了在分組網頁中，應該要由另一人放入自己網頁中。</p>
+<p>因認知錯誤，我只做了pdf，其他東西都放在<a href="https://40823233.github.io/stage1-bg27/content/index.html" rel="nofollow">網頁</a>中。</p>
+<p><a href="https://github.com/40823233/stage1-bg27/blob/main/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage1-bg27.pdf">PDF</a></p>
+<p>其餘內容於報告中口頭描述。</p>
+<h1>stage2-bg8</h1>
+<p>第二次分組組長為40623144</p>
+<p>我負責做<a href="https://40623144.github.io/stage2-bg8/reveal/index.html#/">reveal</a>及分組部分頁面的調整。</p>
+<p>以及最後繳交的<a href="https://github.com/40623144/stage2-bg8/blob/48291746e0626f55a2de1a32d20037018e2ebdf1/downloads/2021-%E5%8D%94%E5%90%8C%E7%94%A2%E5%93%81%E8%A8%AD%E8%A8%88%E5%AF%A6%E7%BF%92-stage2-bg8.pdf">PDF</a>及<a href="https://www.youtube.com/watch?v=FecxkBLTXnc">模擬影片</a>上傳<img alt="" height="87" src="/images/40823233.png" width="300"/></p>
+<p><a class="pl-3 pr-3 py-3 p-md-0 mt-n3 mb-n3 mr-n3 m-md-0 Link--primary no-underline no-wrap" data-pjax="" href="https://github.com/40623144/stage2-bg8/commits/main"><span class="d-none d-sm-inline"><span aria-label="Commits on main" class="color-text-secondary d-none d-lg-inline">commits</span></span></a>可以證明我所做的事情。</p>
+<p>較為可惜的是報告當時繪圖的人不在，緊急之下跳過許多關於繪圖的部分，導致報告的很爛。</p>
+<h1>stage3-bg7</h1>
+<p>本次分組組員</p>
+<p><a href="https://40623144.github.io/cd2021">40623144</a></p>
+<p><a href="https://40823233.github.io/cd2021">40823233</a></p>
+<p><a href="https://s40723224.github.io/cd2021">40723224</a></p>
+<p><a href="https://40823241.github.io/cd2021">40823241</a></p>
+<p><a href="https://40423155.github.io/cd2021">40423155</a></p>
+<p><a href="https://40823227.github.io/cd2021">40823227</a></p>
+<p><a href="https://s40723233.github.io/cd2021">40723233</a></p>
 <h1>倉庫</h1>
 <p>原始網站刪除的東西還有部分筆記在此</p>
 <p><span>備註:記得前往github自己的帳戶中 seeting/gitgub page裡面將 Branch修改為 master</span></p>
