--- a/content/W15.html
+++ b/content/W15.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li class='has-children'><a href='stage3-bg7.html'>stage3-bg7</a><ul class='dropdown'><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,10 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫<br /><h1>W15</h1>
+    <div id="tipue_search_content">W14 << <a href='W14.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27<br /><h1>W15</h1>
 <p>W15取分項目1由我負責，證據於<a href="https://youtu.be/WbbXqoTKe8I">6/4號小組討論</a>中的meet文字討論欄中</p>
 <p>影片1</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
 <p>影片字幕中文(google翻譯):</p>
 <p>我們在前面看到了這個簡單的雙連桿機器人<br/>關於正向運動學的講座。</p>
 <p>描述了該機器人的工具提示位姿<br/>簡單地由兩個數字，坐標 x 和</p>
@@ -223,7 +223,7 @@ img.add_border {
 <p>是否定的。</p>
 <p>影片2</p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/eIZuz1XCd0w" title="YouTube video player" width="560"></iframe></p>
 <p>影片字幕中文(google翻譯):</p>
 <p>這里我們有與我們相同的兩個鏈接機器人<br/>只是看著，但這次我們要</p>
 <p>使用分析方法解決它，即<br/>我們是否會更多地依賴代數，</p>
@@ -256,7 +256,7 @@ img.add_border {
 <p>Y 平方等於這個特定的覆數<br/>表達。所以我可以用和代替它</p>
 <p>做一些簡化，我最終得到這個<br/>Q1 的表達式稍微簡單一些。和</p>
 <p>這是我得到的相同表達<br/>上一節中的幾何方法。</p>
-<br />W14 << <a href='W14.html'>Previous</a> <a href='倉庫.html'>Next</a> >> 倉庫</div>
+<br />W14 << <a href='W14.html'>Previous</a> <a href='stage1-bg27.html'>Next</a> >> stage1-bg27</div>
         
     <!-- footer -->
       <div class="container">
