--- a/content/W13.html
+++ b/content/W13.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li class='has-children'><a href='stage3-bg7.html'>stage3-bg7</a><ul class='dropdown'><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li><a href='倉庫.html'>倉庫</a></li>
+                     <li><a href='首頁.html'>首頁</a><li><a href='W5.html'>W5</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a><li><a href='stage1-bg27.html'>stage1-bg27</a><li><a href='stage2-bg8.html'>stage2-bg8</a><li><a href='stage3-bg7.html'>stage3-bg7</a><li><a href='倉庫.html'>倉庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage3-bg7 << <a href='stage3-bg7.html'>Previous</a> <a href='W14.html'>Next</a> >> W14<br /><h1>W13</h1>
+    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W14.html'>Next</a> >> W14<br /><h1>W13</h1>
 <p>機械手臂程式</p>
 <p>參考組長影片:<a href="https://40623144.github.io/cd2021/content/%E7%AC%AC%E5%8D%81%E4%B8%89%E9%80%B1.html">模擬影片</a></p>
 <div class="line number1 index0 alt2"><code class="py keyword">from</code> <code class="py plain">robolink </code><code class="py keyword">import</code> <code class="py keyword">*</code></div>
@@ -352,7 +352,7 @@ img.add_border {
 <div class="line number214 index213 alt1"><code class="py comments"># Move home when the robot finishes</code></div>
 <div class="line number215 index214 alt2"><code class="py plain">robot.MoveJ([</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">0</code><code class="py plain">,</code><code class="py value">10</code><code class="py plain">,</code><code class="py keyword">-</code><code class="py value">200</code><code class="py plain">])</code></div>
 <p></p>
-<br />stage3-bg7 << <a href='stage3-bg7.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
+<br />W5 << <a href='W5.html'>Previous</a> <a href='W14.html'>Next</a> >> W14</div>
         
     <!-- footer -->
       <div class="container">
